Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21600

[REG 4.7 -> 4.8] Visual artifacts in code completion popup

XMLWordPrintable

    • Linux/X11
    • 9e17bd1bf0037e06c3f89d92d58c6c4b82cabf00 (qt-creator/qt-creator/master)

      When doing code completion in C++ it can happen that the code completion popup content tries to show multi-line completions, but fails to render this correctly. see attached image.

      This seems to be a regression from 4.7.2, where I didn't get any multi-line completions.

        For Gerrit Dashboard: QTCREATORBUG-21600
        # Subject Branch Project Status CR V

            kosjar Nikolai Kosjar
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes